--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
           <div class="content-inner">
             <h2>Information</h2>
             <ul>
+              <li><a link="" href="https://github.com/kimyo1/hyowonkim/blob/main/HyowonKIM_s_Curriculum_Vitae.Mar25.pdf" target="_blank"> C.V.</a></li>
               <li><a>Affiliation : Departamento de Física, Universidad Técnica Federico Santa María, Av. España 1680, Valparaiso de Chile </a></li>
               <!--<li><a>Affiliation 1 : Korea, University of Science and Technology</a><a link href="https://www.ust.ac.kr" target="_blank">(UST)</a></li>-->
               <!--<li><a>Affiliation 2 : Korea Astronomy and Space Science Institute</a><a link href="https://www.kasi.re.kr" target="_blank">(KASI)</a></li>-->
