--- a/index.html
+++ b/index.html
@@ -90,20 +90,19 @@
           <h1>ABOUT</h1>
           <h2>[ 김효원/ Hyo-Won-Kim/ jyo.won.kim/ 金孝元]</h2>
           <p>
-            " I like animals, especially cats and sea turtles. 
-          I like playing PC Game, TRPG, reading, and watching Science Fiction (Philip Kindred Dick, Andy Weir, ChoYeop Kim). 
-             Nowadays, I'm learning Spanish and doing crochet. And my specialty is ruining baking. Only one of the third can survive. </p>
-            <br class="blank" />
+            I like animals, especially cats and sea turtles. 
+          I like playing PC Game, TRPG, reading and watching Science Fiction (Philip Kindred Dick, Andy Weir, ChoYeop Kim). 
+             Nowadays, I'm learning Spanish and doing crochet. Now I can make edible bread! </p>
             <p>I have experience in observation and data reduction in spectroscopy. 
             I'm interested in combining and applying results from simulation to observation data.
             I'm researching the formation and evolution of the galaxy cluster and BCG. 
            But I am also curious about the nature of the Large-scale structure of the universe. 
-            And how galaxies are connected from the past to the present. "
+            And how galaxies are connected from the high z to the low z "
           </p>
           <div class="content-inner">
             <h2>Information</h2>
             <ul>
-              <li><a link="" href="https://github.com/kimyo1/hyowonkim/blob/main/HyowonKIM_s_Curriculum_Vitae.Mar25.pdf" target="_blank"> C.V.</a></li>
+              <li><a link="" href="https://github.com/kimyo1/hyowonkim/blob/main/HyowonKIM_s_Curriculum_Vitae.Mar25.pdf" target="_blank"> C.V. [<- click]</a></li>
               <li><a>Affiliation : Departamento de Física, Universidad Técnica Federico Santa María, Av. España 1680, Valparaiso de Chile </a></li>
               <!--<li><a>Affiliation 1 : Korea, University of Science and Technology</a><a link href="https://www.ust.ac.kr" target="_blank">(UST)</a></li>-->
               <!--<li><a>Affiliation 2 : Korea Astronomy and Space Science Institute</a><a link href="https://www.kasi.re.kr" target="_blank">(KASI)</a></li>-->
@@ -150,7 +149,7 @@
           <div class="content-inner">
             <span>Publications</span>
             <ul>
-            <li><u><a link=""href="https://ui.adsabs.harvard.edu/public-libraries/3oDpvOWnSH6GsH9UpU0bJg" target="_blank"> ADS library</a></u></li>
+            <li><u><a link=""href="https://ui.adsabs.harvard.edu/public-libraries/3oDpvOWnSH6GsH9UpU0bJg" target="_blank"> ADS library [<- click] </a></u></li>
             </ul>
           </div>
             <div class="content-inner">
@@ -165,29 +164,6 @@
             <li><u><a link=""href="https://en.kas.org/" target="_blank">Korean Astronomical Society (KAS)</a></u></li>
              <!-- <li><u><a link=""href="https://aas.org/" target="_blank">Amerian Astronomical Society (AAS)</a></u></li>-->
             <li><u><a link=""href="https://sochias.cl/tiempo-de-observacion/lista-blanca/" target="_blank">SOciedad CHIlena de AStronomia_lista blanca (SOCHIAS)</a></u></li>
-          </div>
-          
-          <div class="content-inner">
-            <span>Talks</span>
-            <h2>-National</h2>
-            <ul>
-              <li><a>Fall 2022) Korea Astronomical Society meeting, GyungJu/ Oral talk</a></li>
-              <li><a>Spring 2019) Korea Astronomical Society meeting, Busan/ Oral talk</a></li>
-              <li><a>Jan 2019) Galaxy formation workshop 2019, Yonsei University/Oral talk</a></li>
-              <li><a>Jan 2019) Infrared Medium-Deep Survey Workshop 2019, Seoul National University/ Oral talk</a></li>
-              <li><a>Fall 2018) Korea Astronomical Society meeting, ChungSong/Poster</a></li>
-            </ul>
-            <h2>-International</h2>
-            <ul>
-              <li><a>Aug 2024) The 19th S-PLUS collaboration meeting, Brazil/ Oral talk</a></li>
-              <li><a>Jun 2023) Meeting of the American Astronomical Society, U.S./ Poster</a></li>
-              <li><a>May 2023) Galaxy Groups and Clusters III, Chile/ Oral talk</a></li>
-              <li><a>Fed 2023) 2023 Galaxy evolution workshop, Japan/ Poster+flash talk</a></li>
-              <li><a>Aug 2022) IAUGA, Korea/ Poster</a></li>
-              <li><a>May 2022) IV Workshop on Numerical and Theoretical Astrophysics, Chile/ Oral talk</a></li>
-              <li><a>Feb 2022) 2021 Galaxy evolution workshop, Zoom/ Oral talk</a></li>
-              
-            </ul>
           </div>
 
         </section>
