--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <li><a href="#experiences">EXPERIENCES</a></li>
             <li><a href="#contact">CONTACT</a></li>
             <li><a link="" href="states.html" target="_blank"> App</a></li>
-           <!-- <li><a link="" href="https://github.com/kimyo1/rotation-method-for-cluster-dynamical-state/tree/main" target="_blank"> Repository </a></li> -->
+            <li><a link="" href="https://github.com/kimyo1/rotation-method-for-cluster-dynamical-state/tree/main" target="_blank"> Repository </a></li>
           </div>
           <!-- <button class="nav-icon nav-toggle">
             <i class="fa-solid fa-bars"></i>
@@ -252,3 +252,4 @@
     </div>
   </body>
 </html>
+
